# microdet_v2

./: .gitignore  README.md  microdet.toml  pyproject.toml  requirements.txt
runs/microdet_drone/logs/: scalars.csv  scalars.jsonl
runs/microdet_drone/tb/: events.out.tfevents.1765439263.sai.133406.0  events.out.tfevents.1765439507.sai.147323.0  events.out.tfevents.1765439676.sai.157106.0  events.out.tfevents.1765520970.sai.171730.0  events.out.tfevents.1765524030.sai.14809.0  events.out.tfevents.1765524065.sai.17020.0  events.out.tfevents.1765524132.sai.20066.0  events.out.tfevents.1765524574.sai.20694.0  events.out.tfevents.1765525689.sai.21686.0  events.out.tfevents.1765526113.sai.22014.0  events.out.tfevents.1765526335.sai.22329.0  events.out.tfevents.1765527039.sai.23203.0  events.out.tfevents.1765527382.sai.27848.0  events.out.tfevents.1765528104.sai.30910.0  events.out.tfevents.1765528275.sai.31314.0  events.out.tfevents.1765528414.sai.31630.0  events.out.tfevents.1765528779.sai.32142.0  events.out.tfevents.1765529291.sai.33001.0  events.out.tfevents.1765529800.sai.33962.0  events.out.tfevents.1765861754.sai.9194.0  (+61 more)
tmp/: test_cfg.py
tmp/assigners/: center_assigner.py
tmp/data/: coco_dataset.py  collate.py  transforms.py
tmp/infer/: run_infer.py
tmp/model/: __init__.py  microdet.py  model_wrapper.py  registry.py
tmp/optim/: __init__.py  builder.py
tmp/src/: __init__.py  common_imports.py
tmp/test/: debug_dataset.py
tmp/train/: pred_utils.py  train.py  validate.py
tmp/utils/: letterbox.py  logger.py  loss_utils.py  metrics.py  profiler.py  seed.py
(+25 files in other folders)
