[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "microdet"
version = "0.1.0"

description = "Object detection model for drone"


readme = "README.md"

license = "GPL-3.0-or-later"

requires-python = ">=3.13"
keywords = []

authors = [
    { name = "akileshas", email = "akileshas.ai@gmail.com" },
    { name = "Ravindran S", email = "ravindrans.dev@gmail.com" },
]

dependencies = [
    "torch",
    "torchvision",
    "numpy",
    "opencv-python",
    "pycocotools",
    "tqdm",
    "scipy",
    "tensorboard",
    "albumentations",
    "pandas",
    "matplotlib",
]

[project.optional-dependencies]
dev = [
    "polars",
    "pyyaml>=5.3.1",
    "torch>=1.8.0,!=2.4.0; sys_platform == 'win32'",
]

[project.urls]
Repository = "https://github.com/akileshas/microdet"
Issues = "https://github.com/akileshas/microdet/issues"


[tool.setuptools.packages.find]
include = ["tmp*"]
exclude = [
    "m_env*",
    "venv*",
    ".venv*",
    "build*",
    "dist*",
]
